# DevOpsOverSightAgent

./: .dockerignore  .gitignore  CLAUDE.md  KNOWN_ISSUES.md  Makefile  PREREQUISITES.md  README.md  architecture.md  decisions.md  ralph-tests.sh  runTests.sh
.claude/: mcp.json  settings.json
.claude/agents/: create-technical-requirements.md
.claude/commands/: phase-stats.md
LangChain Approach/: CLAUDE.md  KNOWN_ISSUES.md  Makefile  README.md  decisions.md
LangChain Approach/architecture/: architecture.md  sequence-a2a-delegation.md  sequence-overview.md
LangChain Approach/code/: .dockerignore  Dockerfile  pyproject.toml
LangChain Approach/code/agent/devops_oversight_agent/: pyproject.toml
LangChain Approach/code/agent/devops_oversight_agent/devops_oversight_agent/: __init__.py  a2a_clients.py  agent.py  audit.py  catalog.py  correlation.py  main.py  prompts.py  runbooks.py  topology_tools.py
LangChain Approach/code/agent/devops_oversight_agent/tests/: test_gate.py  test_topology.py
LangChain Approach/code/agent/oversight_common/: pyproject.toml
LangChain Approach/code/agent/oversight_common/oversight_common/: __init__.py  a2a_server.py  config.py  llm_factory.py  mcp_client.py  otel.py  token_csv.py
LangChain Approach/code/agent/oversight_common/tests/: test_a2a_server.py  test_config.py  test_llm_factory.py  test_token_csv.py
LangChain Approach/code/agent/splunk_agent/: pyproject.toml
LangChain Approach/code/agent/splunk_agent/splunk_agent/: __init__.py  __main__.py  mcp_client.py  prompts.py
LangChain Approach/code/agent/splunk_agent/tests/: test_splunk_agent.py
LangChain Approach/code/generate/customer/: pyproject.toml
LangChain Approach/code/generate/customer/customer_service/: __init__.py  app.py
LangChain Approach/code/generate/customer/tests/: test_customer_service.py
LangChain Approach/code/generate/load_gen/: pyproject.toml
LangChain Approach/code/generate/load_gen/load_gen/: __init__.py  main.py
LangChain Approach/code/generate/load_gen/tests/: test_load_gen.py
LangChain Approach/code/generate/mesh_common/: pyproject.toml
LangChain Approach/code/generate/mesh_common/mesh_common/: __init__.py  chaos.py  db.py  obs.py  runner.py  telemetry.py  w3c.py
LangChain Approach/code/generate/mesh_common/tests/: test_chaos.py  test_obs.py  test_w3c.py
LangChain Approach/code/generate/notification/: pyproject.toml
LangChain Approach/code/generate/notification/notification_service/: __init__.py  app.py
LangChain Approach/code/generate/notification/tests/: test_notification_service.py
LangChain Approach/code/mcp/datadog_mock_mcp/: pyproject.toml
LangChain Approach/code/mcp/datadog_mock_mcp/datadog_mock_mcp/: __init__.py  mock_data.py  server.py
LangChain Approach/code/mcp/datadog_mock_mcp/tests/: test_datadog_mock_mcp.py
LangChain Approach/code/mcp/splunk_mock_mcp/: pyproject.toml
LangChain Approach/code/mcp/splunk_mock_mcp/splunk_mock_mcp/: __init__.py  mock_data.py  server.py
LangChain Approach/code/mcp/splunk_mock_mcp/tests/: test_splunk_mock_mcp.py
LangChain Approach/compose/: .env.example  docker-compose.saas.yml  docker-compose.yml
LangChain Approach/demo/: inject-chaos.sh  manualdemo.md  reset.sh  script.md
LangChain Approach/technical requirments/: technical-requirements.md
LangChain Approach/tests/: README.md  runA2AConfigTests.sh  runDockerConfigTests.sh  runUnitTests.sh
LangChain Approach/todo/: README.md  phase-0-prereqs.md  phase-1-compose.md  phase-2-mesh.md  phase-3-mcp.md  phase-4-agent.md  phase-5-verify.md
MCP Best Practices Approach/: CLAUDE.md  KNOWN_ISSUES.md  Makefile  README.md  decisions.md
MCP Best Practices Approach/architecture/: architecture.md  sequence-overview.md  sequence-tool-routing.md
MCP Best Practices Approach/compose/: .env.example  README.md  docker-compose.yml
MCP Best Practices Approach/demo/: manualdemo.md  reset.sh  script.md
MCP Best Practices Approach/mcp best practices/: README.md
MCP Best Practices Approach/scripts/: build-wso2-images.sh  prepare-kubeconfig.sh  scrub-check.sh
MCP Best Practices Approach/techical requirements/: technical-requirements.md
MCP Best Practices Approach/tests/: README.md  runDockerConfigTests.sh  runUnitTests.sh
MCP Best Practices Approach/todo/: README.md  phase-1-compose.md  phase-2-ballerina.md  phase-3-mcp.md  phase-4-agent.md  phase-5-verify.md  phase-6-mcp-expansion.md  phase-7-skills-runbooks.md
Result Presentation/: README.md  measured-ab-results-cloud.csv  measured-ab-results.csv
Result Presentation/generator/: .env_example  analyze.py  build_deck.py  build_exec_deck.py  measure_cloud.sh  render.sh  run_cloud.sh  run_more.sh
architecture/: architecture.md  sequence-overview.md  sequence-tool-routing.md
business requirements/: business-requirements.md
catalog/: services.yaml
code/: CONVENTIONS.md
code/agent/: Dependencies.toml  llm_client.bal
code/generate/: README.md
compose/: .env.example  README.md  docker-compose.saas.yml  docker-compose.yml
compose/otel-collector/: config.saas.yaml  config.yaml
compose/postgres/: init.sql
demo/: inject-chaos.sh  reset.sh  script.md
generate/: CONVENTIONS.md
generate/agent/: Ballerina.toml  Config.toml  Dependencies.toml  Dockerfile  anthropic_client.bal  devops_agent.bal  devops_oversight_agent.bal  llm_client.bal  mcp_client.bal  ollama_client.bal  prompts.bal
generate/customer/: Ballerina.toml  Config.toml  service.bal
generate/datadog-mock-mcp/: Dependencies.toml  Dockerfile
generate/inventory/: Dockerfile  inventory.bal
generate/invoice/: service.bal
generate/load-gen/: Dockerfile  main.bal  tracing.bal
generate/mcp-proxy/: Ballerina.toml  Dockerfile  catalog.bal  (+2 more)
mcp best practices/: mcp-low-context-how-to.md  mcp-low-context-slides.html
presentation/: DevOps-OverSight-Agent-Executive-Overview.pptx  DevOps-OverSight-Agent-POC-Review.pptx  README.md
tests/: README.md  ralph-tests.sh  runUnitTests.sh
todo/: README.md  phase-0-prereqs.md  phase-1-compose.md  phase-2-ballerina.md  phase-3-mcp.md  phase-4-agent.md  phase-5-verify.md
(+144 files in other folders)
