[project]
name = "devops-oversight-agent"
version = "0.1.0"
description = "DevOpsOverSightAgent: orchestrator with A2A delegate tools, topology tools, and the hard propose-before-act gate"
requires-python = ">=3.12"
dependencies = [
    "oversight-common",
    "langchain>=1.0,<2",
    "langgraph>=1.0,<2",
    "a2a-sdk>=1.1,<2",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "respx>=0.22"]

[tool.uv.sources]
oversight-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devops_oversight_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
