[project]
name = "oversight-common"
version = "0.1.0"
description = "oversight-common: shared agent-tier kit (LLM factory, token CSV callback, OTel setup, config)"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0,<2",
    "langgraph>=1.0,<2",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-ollama",
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.9,<2",
    "a2a-sdk[http-server]>=1.1,<2",
    "httpx>=0.28",
    "uvicorn>=0.34",
    "starlette>=0.40",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "respx>=0.22"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oversight_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
