[project]
name = "splunk-agent"
version = "0.1.0"
description = "SplunkAgent: A2A server wrapping a LangChain agent over the Splunk MCP server"
requires-python = ">=3.12"
dependencies = [
    "oversight-common",
    "langchain>=1.0,<2",
    "a2a-sdk[http-server]>=1.1,<2",
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.9,<2",
    "uvicorn>=0.34",
    "httpx>=0.28",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "respx>=0.22"]

[tool.uv.sources]
oversight-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["splunk_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
