[project]
name = "load-gen"
version = "0.1.0"
description = "load-gen: traffic driver with baseline/spike/regression YAML patterns"
requires-python = ">=3.12"
dependencies = [
    "mesh-common",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "respx>=0.22"]

[tool.uv.sources]
mesh-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["load_gen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
