[project]
name = "mesh-common"
version = "0.1.0"
description = "Shared mesh kit: chaos injection, structured logging, OTel telemetry, dual-listener runner, lazy infra clients, W3C traceparent helpers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "asyncpg>=0.30",
    "redis>=5.2",
    "nats-py>=2.9",
    "pyyaml>=6.0",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-asyncpg",
    "opentelemetry-instrumentation-redis",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "respx>=0.22"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mesh_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
