[project]
name = "notification-service"
version = "0.1.0"
description = "notification-service: FastAPI port of the Ballerina notification service (business :9090, chaos :9099)"
requires-python = ">=3.12"
dependencies = [
    "mesh-common",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "respx>=0.22"]

[tool.uv.sources]
mesh-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notification_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
